# godzkilla

./: .gitignore  README.md  SKILL.md  clone.go  finder.go  go.mod  linker.go  main.go  namer.go  namer_test.go  pyproject.toml  resolver.go  resolver_test.go
cli/: install.go  list.go  root.go  sync.go  update.go
cli/godzkilla/: main.go
cli/gozkilla/: main.go
cmd/: install.go  list.go  root.go  update.go
docs/: design.md
internal/skill/: finder.go  linker.go  namer.go  namer_test.go
internal/source/: clone.go  resolver.go
src/godzkilla/: __init__.py  cli.py  linker.py  namer.py  source.py
